[lworld] serviceability/jvmti/RedefineClasses/RedefineObject.java fails with added ACC_IDENTITY to object for old version

XMLWordPrintable

      The test redefines j.l.Object with an older classfile version, and during the redefinition the CFP adds ACC_IDENTITY, even though Object is a special case that should not specify ACC_IDENTITY (since it would force all classes)

      The added flag caused VM_RedefineClasses::compare_and_normalize_class_versions() to fail with differing class modifiers, and just as well...otherwise quite a mess would ensue...

      So if you redefine other classes and modify the version, you won't be so lucky...debatable if that is another bug, maybe considered user error.

            Assignee:
            David Simms
            Reporter:
            David Simms
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: